# agentsh

./: .gitignore  Cargo.toml  LICENSE  README.md
.cursor/rules/: project.mdc  rust.mdc
.github/workflows/: ci.yml  release.yml
examples/: async_workflow.py  build_pipeline.py  demo_openai_agents.py  kill_and_timeout.py  list_tools.py  run_command_basics.py  system_info.py
src/: lib.rs  main.rs  output.rs  process.rs  registry.rs  server.rs  session.rs
tests/: test_output.rs  test_process.rs  test_server.rs  test_session.rs
