[package]
name = "agentsh"
version = "0.1.0"
edition = "2024"
description = "An MCP server that lets LLM agents run shell commands and block efficiently instead of polling"
license = "MIT"
repository = "https://github.com/sanjay920/agentsh"

[dependencies]
rmcp = { version = "0.15.0", features = [
    "server",
    "macros",
    "transport-io",
    "schemars",
] }
tokio = { version = "1", features = [
    "macros",
    "rt-multi-thread",
    "io-std",
    "process",
    "signal",
    "time",
    "sync",
    "io-util",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "std", "fmt"] }
uuid = { version = "1", features = ["v4"] }
anyhow = "1.0"
regex = "1"
nix = { version = "0.29", features = ["signal", "process"] }
pty-process = { version = "0.5", features = ["async"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
rmcp = { version = "0.15.0", features = [
    "server",
    "client",
    "macros",
    "transport-io",
    "schemars",
] }
